--- a/config
+++ b/config
@@ -1,6 +1,6 @@
-name                      : E-shop
-version                   : 8.0.0
-author                    : Peter Širka
+name                      : Fortune Networks E-Shop
+version                   : 1.0.0
+author                    : Syche
 
 // A relative URL address into the eshop management
 manager-url               : /$manager
@@ -22,7 +22,7 @@ mail-smtp                 : YOUR.SMTPSERVER.COM
 
 // Image convertor for resizing of pictures
 // Default image converter: im = ImageMagick, gm = GraphicsMagick
-default-image-converter   : gm
+default-image-converter   : im
 
 // Default theme
 default-theme             : default
